# rag-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: datasets.ipynb  dbpedia-runner.ipynb  nfcorpus-runner.ipynb  runner.ipynb  scidocs-runner.ipynb  scifact_runner.ipynb
outputs/arguana/: arguana_bm25_bi.json  arguana_bm25_cross.json  arguana_bm25_none.json  arguana_dense_bi.json  arguana_dense_cross.json  arguana_dense_none.json  arguana_hybrid_bi.json  arguana_hybrid_cross.json  arguana_hybrid_none.json  arguana_tfidf_bi.json  arguana_tfidf_cross.json  arguana_tfidf_none.json
outputs/dbpedia/: dbpedia-entity_bm25_bi.json  dbpedia-entity_bm25_cross.json  dbpedia-entity_bm25_none.json  dbpedia-entity_dense_bi.json  dbpedia-entity_dense_cross.json  dbpedia-entity_dense_none.json  dbpedia-entity_hybrid_bi.json  dbpedia-entity_hybrid_cross.json  dbpedia-entity_hybrid_none.json  dbpedia-entity_tfidf_bi.json  dbpedia-entity_tfidf_cross.json  dbpedia-entity_tfidf_none.json
outputs/fiqa/: fiqa_bm25_bi.json  fiqa_bm25_cross.json  fiqa_bm25_none.json  fiqa_dense_bi.json  fiqa_dense_cross.json  fiqa_dense_none.json  fiqa_hybrid_bi.json  fiqa_hybrid_cross.json  fiqa_hybrid_none.json  fiqa_results.csv  fiqa_tfidf_bi.json  fiqa_tfidf_cross.json  fiqa_tfidf_none.json
outputs/nfcorpus/: nfcorpus_bm25_bi.json  nfcorpus_bm25_cross.json  nfcorpus_bm25_none.json  nfcorpus_dense_bi.json  nfcorpus_dense_cross.json  nfcorpus_dense_none.json  nfcorpus_hybrid_bi.json  (+5 more)
scripts/: download_beir.py  run_all_combinations.py  run_experiment.py
(+53 files in other folders)
