[project]
name = "rag-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beir>=2.0.0",
    "faiss-cpu>=1.7.4",
    "gradio>=5.42.0",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
]
